<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context="mirabbas.smartschedule.activities.MainStudentActivity"
    android:background="@color/theme_color">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />

    <TextView
        android:id="@+id/tv_group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_yellow"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"

        android:textStyle="normal"/>

    <TextView
        android:id="@+id/tv_date_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_yellow"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textStyle="normal"
        android:layout_below="@+id/tv_group_name"/>

    <TextView
        android:id="@+id/tv_type_week_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_yellow"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textStyle="normal"
        android:layout_below="@+id/tv_date_student"/>

    <TextView
        android:id="@+id/tv_number_week_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_yellow"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textStyle="normal"
        android:layout_below="@+id/tv_type_week_student"/>

    <View
        android:id="@+id/next_pair_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/tv_number_week_student"/>

    <TextView
        android:id="@+id/tv_next_pair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/next_pair"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="normal"
        android:layout_below="@+id/next_pair_line"/>

    <TextView
        android:id="@+id/tv_name_pair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/name_pair"
        android:textSize="15sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:textStyle="normal"
        android:layout_below="@+id/tv_next_pair"/>

    <TextView
        android:id="@+id/tv_date_day_pair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/date_day_pair"
        android:textSize="15sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:textStyle="normal"
        android:layout_below="@+id/tv_name_pair"/>

    <TextView
        android:id="@+id/tv_lecture_hall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/lecture_hall"
        android:textSize="15sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:textStyle="normal"
        android:layout_below="@+id/tv_date_day_pair"/>


    <TextView
        android:id="@+id/tv_start_time_pair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/start_time_pair"
        android:textSize="15sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:textStyle="normal"
        android:layout_below="@+id/tv_lecture_hall"/>

    <TextView
        android:id="@+id/tv_teacher_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/teacher_pair"
        android:textSize="15sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:textStyle="normal"
        android:layout_below="@+id/tv_start_time_pair"/>

    <TextView
        android:id="@+id/tv_type_pair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/type_pair"
        android:textSize="15sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:textStyle="normal"
        android:layout_below="@+id/tv_teacher_name"/>

    <Button
        android:id="@+id/schedule_student_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_selector"
        android:textColor="@color/white"
        android:layout_below="@+id/tv_type_pair" />

    <TextView
        android:id="@+id/tv_news_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/news"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textStyle="normal"
        android:layout_below="@+id/schedule_student_button"/>

    <Button
        android:id="@+id/chat_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_chat"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_selector"
        android:textColor="@color/white"
        android:layout_below="@+id/tv_news_student" />



    <ImageButton
        android:id="@+id/send_to_teacher_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:src="@mipmap/messageplus48"
        android:background="#00000000"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/tv_start_time_pair"/>




</RelativeLayout>
</ScrollView>