<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/theme_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/image_mail_layout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/mail_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/email"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_mail_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_mail_layout"
        android:text="@string/send_email_teacher"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/correct_email_teacher"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:padding="10dp"
        android:hint="@string/hint_email_example"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_style"
        android:layout_below="@id/tv_mail_teacher"/>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_selector"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/correct_email_teacher"
        />



</RelativeLayout>